- Updated Version to 0.3 in Dockerfile, README.md, pom.xml - Added bot response when there are no backup files available - Added bot response when an !add / !addhtml command is missing parameters - Refactored AutoUpdate in CatoBot.java - Added config option to change the bot name - Changed Dockerfile from debian Linux to alpine Linux to reduce system usage - Minor little changes in the String formatting of various bot responses